--- a/package.json
+++ b/package.json
@@ -1,15 +1,7 @@
 {
-  "name": "ELIAKIM-MD-WAbot",
-  "version": "1.0.0",
-  "main": "index.js",
-  "scripts": {
-    "start": "node index.js"
-  },
-  "dependencies": {
-    "@adiwajshing/baileys": "^5.0.0",
-    "chalk": "^4.1.2",
-    "pino": "^8.14.1",
-    "ytdl-core": "^4.11.1",
-    "axios": "^0.27.2"
-  }
+  "@whiskeysockets/baileys": "^6.5.0",
+  "chalk": "^4.1.2",
+  "pino": "^8.14.1",
+  "ytdl-core": "^4.11.1",
+  "axios": "^0.27.2"
 }
